[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AKI_ALERT_mdh323"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A package for the Software Engineering for Machine Learning Systems (SEMLS) module"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.doc.ic.ac.uk/pw723/70102-oberbaum-bridge"
